# hackacity

./: .gitignore  PLICity_Hackacity_2024_Notebook.ipynb  PLICity_Hackacity_2024_Notebook_syntetic.ipynb  README.md  [TEAM PLICity] Hackacity 2024 - Notebook.ipynb  analysis.md  main.ipynb  process.py  pyproject.toml
