[project]
name = "hackacity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "fastparquet>=2024.11.0",
    "imbalanced-learn>=0.12.4",
    "ipykernel>=6.29.5",
    "numpy>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
]
